"Eliminacion de archivos no utilizados y agregado nuevos archivos de cursos, calendario, cdm, novedades inscripciones y nosotros "

--- a/Login.html
+++ b/Login.html
@@ -7,9 +7,14 @@
     <link rel="stylesheet" href="login.css">
 </head>
 <body>
+
+    <a href="index.html">
+        <img src="img de EESTN2.jpg" alt="" class="img-EESTN2">
+    </a>
+
+
     <div class="container">
         <div class="container-form">
-            <button class="volver"><a href="index.html">Inicio</a></button>
             <form class="sign-in">
                 <h2>Inicio de sesión</h2>
                 <div class="social-networks">
@@ -33,7 +38,6 @@
         </div>
 
         <div class="container-form">
-            <button class="inicio"><a href="index.html">Inicio</a></button>
             <form class="sign-up">
                 <h2>Registrarse</h2>
                 <div class="social-networks">
