--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
+    <script src="NODE.js"> defer</script>
     <title>E.E.S.T N°2 J.C.P</title>
 </head>
 <body>
@@ -14,20 +15,21 @@
         </div>
 
         <div class="login">
-            <button class="Inicio-sesion"> <a href="Login.html" target="_blank" rel="noopener noreferrer"> <img src="person-add-outline.svg" alt=""> </a></button>
+            <button class="Inicio-sesion"> <a href="Login.html"> 
+                <img src="person-add-outline.svg" alt=""> </a></button>
         </div>
     </header>
 
-    <nav>
+    <nav></nav>
         <ul class="menu-nav-list">
             <li class="nav-btn">
-                <button class="btn4"> <a href="http://" target="_blank" rel="noopener noreferrer">INICIO</a> </button>
-                <button class="btn5"> <a href="putolandia.html" target="_blank" rel="noopener noreferrer">PUTOLANDIA </a></button>
-                <button class="btn6"> <a href="http://" target="_blank" rel="noopener noreferrer">CURSOS</a> </button>
-                <button class="btn7"> <a href="http://" target="_blank" rel="noopener noreferrer">NOSOTROS</a> </button>
-                <button class="btn8"> <a href="http://" target="_blank" rel="noopener noreferrer">CALENDARIO</a></button>
-                <button class="btn9"> <a href="http://" target="_blank" rel="noopener noreferrer">INSCRIPCIONES</a></button>
-                <button class="btn10"> <a href="http://" target="_blank" rel="noopener noreferrer">CENTRO DE ESTUDIANTES</a></button>        
+                <button class="btn4"> <a href="index.html">INICIO</a> </button>
+                <button class="btn5"> <a href="novedades.html">NOVEDADES</a></button>
+                <button class="btn6"> <a href="cursos.html">CURSOS</a> </button>
+                <button class="btn7"> <a href="nosotros.html">NOSOTROS</a> </button>
+                <button class="btn8"> <a href="calendario.html">CALENDARIO</a></button>
+                <button class="btn9"> <a href="inscripciones.html">INSCRIPCIONES</a></button>
+                <button class="btn10"> <a href="cdm.html">CENTRO DE ESTUDIANTES</a></button>        
             </li>
         </ul>
     </nav>
