--- a/putolandia.html
+++ b/putolandia.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="putolandia.css">
-    <title>E.E.S.T N°2 PUTOLANDIA</title>
+    <title>E.E.S.T N°2 NOVEDADES</title>
 </head>
 <body>
     <header class="header">
         <div class="container-h1">
             <img src="img de EESTN2.jpg" alt="" class="img-EESTN2">
-            <h1 class="text-titulo"> PUTOLANDIA</h1>
+            <h1 class="text-titulo"> NOVEDADES</h1>
         </div>
         <div class="login">
             <button class="Inicio-sesion"> <a href="Login.html" target="_blank" rel="noopener noreferrer"> <img src="person-add-outline.svg" alt=""> </a></button>
