--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <ul class="menu-nav-list">
             <li class="nav-btn">
                 <button class="btn4"> <a href="http://" target="_blank" rel="noopener noreferrer">INICIO</a> </button>
-                <button class="btn5"> <a href="putolandia.html" target="_blank" rel="noopener noreferrer">PUTOLANDIA </a></button>
+                <button class="btn5"> <a href="putolandia.html" target="_blank" rel="noopener noreferrer">NOVEDADES </a></button>
                 <button class="btn6"> <a href="http://" target="_blank" rel="noopener noreferrer">CURSOS</a> </button>
                 <button class="btn7"> <a href="http://" target="_blank" rel="noopener noreferrer">NOSOTROS</a> </button>
                 <button class="btn8"> <a href="http://" target="_blank" rel="noopener noreferrer">CALENDARIO</a></button>
